lyric fixes, double scroll fix attempt

--- a/Psalter2025/src/material-theme.scss
+++ b/Psalter2025/src/material-theme.scss
@@ -11,7 +11,7 @@
 html, body { 
   padding: 0;
   margin: 0;
-  height: 100dvh;
+  height: 100vh;
   font-family: sans-serif; 
 }  
   
